--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "learn-functional-programming",
+  "name": "sacombank-testing",
   "version": "1.0.0",
-  "description": "Learn Functional Programming",
+  "description": "Sacombank Testing",
   "main": "./src/index.js",
   "author": "Tung Dang",
   "license": "ISC",
@@ -9,9 +9,7 @@
     "start": "browser-sync src -w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {
-    
-  },
+  "dependencies": {},
   "devDependencies": {
     "browser-sync": "^2.26.3"
   }
